# bb_bg

./: Cargo.toml  README.md  bb-bg_0.1.1-1_amd64.deb  bb-bg_0.1.5-1_amd64.deb  bb_bg.deb  config_example
src/: lib.rs  main.rs  main.rs_old
src/bgset/: config.rs  foo.txt  img_scan.rs  mod.rs  nitrogen.rs  plasma.rs  wmsetbg.rs
src/bgutils/: commands.rs  mod.rs  utils.rs
