[package]
name = "bb_bg"
version = "0.1.7"
authors = ["bdkr"]
edition = "2024"
license = "Apache 2.0"
description = "A tool to control rotation of desktop background images."
homepage= "https://github.com/BDKR-actual/bb_bg" 

[dependencies]
scan_dir = "0.3.3"
rand = "0.6"
getopts = "0.2.18"
envmnt = "0.6.0"
# dirs = "1.0.5"
dirs = "2.0"
system = "0.3.3"
libc = "0.2.159"
memory-stats = "1.2.0"
anyhow = "1.0.97"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 8
panic = 'unwind'
incremental = false
overflow-checks = false
# libc = "0.2"
